Closed
Bug 842015
Opened 13 years ago
Closed 13 years ago
Normal tabs are converted to private tabs
Categories
(Firefox for Android Graveyard :: General, defect)
Tracking
(firefox20+ verified, firefox21+ verified, firefox22 verified, fennec20+)
VERIFIED
FIXED
Firefox 22
People
(Reporter: yves.dessertine2, Assigned: jdm)
References
Details
(Keywords: regression, reproducible)
Attachments
(2 files)
|
230.38 KB,
image/png
|
Details | |
|
3.29 KB,
patch
|
bzbarsky
:
review+
lsblakk
:
approval-mozilla-aurora+
lsblakk
:
approval-mozilla-beta+
|
Details | Diff | Splinter Review |
User Agent: Mozilla/5.0 (X11; Ubuntu; Linux i686; rv:18.0) Gecko/20100101 Firefox/18.0
Build ID: 20130201185928
Steps to reproduce:
Tested on a Galaxy S3 w/ Android 4.1.2 stock rom, french, on Wifi connection
1) Kill Nightly process Android App Manager
2) Open Nightly
3) Navigate to http://m.pcinpact.com (using awesome screen)
4) Long press on any link, then select "Open Link in Private Tab"
5) Switch to that private tab and click on a link. (Page opens in *ANOTHER* private tab. -- Bug?)
6) Close the two private tabs by swiping them away. You return to the "normal" tab
7) Long press on a link
Actual results:
"Open Link in Private Tab" not present in menu
Expected results:
"Open Link in Private Tab" present in menu
| Reporter | ||
Updated•13 years ago
|
OS: Linux → Android
Hardware: x86 → ARM
| Reporter | ||
Comment 1•13 years ago
|
||
Sorry, correction:
========
Actual results:
"Open Link in New Tab" not present in menu
Expected results:
"Open Link in New Tab" present in menu
Updated•13 years ago
|
Assignee: nobody → bnicholson
Status: UNCONFIRMED → NEW
tracking-fennec: --- → ?
status-firefox20:
--- → affected
status-firefox21:
--- → affected
Ever confirmed: true
Keywords: reproducible
Comment 2•13 years ago
|
||
| Reporter | ||
Comment 3•13 years ago
|
||
(In reply to Kevin Brosnan [:kbrosnan] from comment #2)
> bug 826487?
No. Bug 826487 is just a label change.
Bug 842015 is still reproducible in 21.0a1 (2013-02-19)
Updated•13 years ago
|
status-firefox22:
--- → affected
Comment 4•13 years ago
|
||
Bug 826644 added code to hide "Open Link in New Tab" when in a private tab. Seems like a regression from that code.
Updated•13 years ago
|
Status: NEW → ASSIGNED
Keywords: regression
Updated•13 years ago
|
tracking-fennec: ? → 20+
Comment 5•13 years ago
|
||
This is not a bug from bug 826644. I can reproduce this without using this context menu item at all:
1) Open http://m.pcinpact.com in a normal tab
2) Open http://m.pcinpact.com in a private tab
3) In the private tab, click one of the links, then click a link on the following page (which should result in a new private tab being opened)
At this point, the normal tab from step 1 is somehow converted to a private browsing tab (even though this isn't apparent in the tabs tray UI).
Comment 6•13 years ago
|
||
I don't know how useful this is, but commenting out this line makes the problem go away: http://hg.mozilla.org/mozilla-central/file/885cde564ff3/docshell/base/nsDocShell.cpp#l2087. I wonder if the docshell of the non-private tab is somehow being set as a child docshell of the private tab...?
Josh, will you be able to take a look at this?
Flags: needinfo?(josh)
| Assignee | ||
Updated•13 years ago
|
Assignee: bnicholson → josh
Updated•13 years ago
|
Flags: needinfo?(josh)
| Assignee | ||
Comment 7•13 years ago
|
||
Attachment #717371 -
Flags: review?(bzbarsky)
Comment 8•13 years ago
|
||
Comment on attachment 717371 [details] [diff] [review]
Avoid modifying the root docshell's privacy status when we aren't opening a new toplevel window.
r=me
Attachment #717371 -
Flags: review?(bzbarsky) → review+
| Assignee | ||
Comment 9•13 years ago
|
||
Comment 10•13 years ago
|
||
Thanks, Josh!
This needs to land on Aurora and Beta too.
| Assignee | ||
Comment 11•13 years ago
|
||
Comment on attachment 717371 [details] [diff] [review]
Avoid modifying the root docshell's privacy status when we aren't opening a new toplevel window.
[Approval Request Comment]
Bug caused by (feature/regressing bug #): 795556
User impact if declined: Public tabs on mobile unexpectedly turn into private ones.
Testing completed (on m-c, etc.): m-c
Risk to taking this patch (and alternatives if risky): Potential for subtle edge case behaviour (private tabs in public windows or the reverse) in Firefox if the patch isn't correct. No alternatives.
String or UUID changes made by this patch: None.
Attachment #717371 -
Flags: approval-mozilla-beta?
Attachment #717371 -
Flags: approval-mozilla-aurora?
Comment 12•13 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → Firefox 22
Updated•13 years ago
|
tracking-firefox20:
--- → +
tracking-firefox21:
--- → +
Comment 13•13 years ago
|
||
Comment on attachment 717371 [details] [diff] [review]
Avoid modifying the root docshell's privacy status when we aren't opening a new toplevel window.
Let's get this uplifted to beta right away so there's time to do testing around it and backout if need be, tracking as well so this stays on our radar.
Attachment #717371 -
Flags: approval-mozilla-beta?
Attachment #717371 -
Flags: approval-mozilla-beta+
Attachment #717371 -
Flags: approval-mozilla-aurora?
Attachment #717371 -
Flags: approval-mozilla-aurora+
Updated•13 years ago
|
Updated•13 years ago
|
| Assignee | ||
Comment 14•13 years ago
|
||
Updated•13 years ago
|
Updated•13 years ago
|
Comment 15•13 years ago
|
||
Verified on Aurora 21.0a2 2013-03-14 and Firefox Mobile 20 beta 5 on the Smasung Galaxy Tab 2 7.0 (Android 4.1.1)
Updated•5 years ago
|
Product: Firefox for Android → Firefox for Android Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•