Bug 842015 - Avoid modifying the root docshell's privacy status when we aren't opening a new toplevel window. r=bz a=lsblakk